--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
-json
-{
+json{
   "name": "veritas-web",
   "version": "1.0.0",
   "description": "VERITAS Truth Assessment Platform - Web Edition",
   "main": "api/assess.js",
+  "scripts": {
+    "dev": "vercel dev",
+    "deploy": "vercel --prod"
+  },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.39.0"
+    "@anthropic-ai/sdk": "^0.35.0"
   },
   "engines": {
     "node": ">=18"
-  }
+  },
+  "author": "VERITAS LLC",
+  "license": "MIT"
 }
